--- a/week_4/index.html
+++ b/week_4/index.html
@@ -10,10 +10,17 @@
         <button id = "btn">GOOGLE</button>
     </div>
     <script>
+        // const button = document.querySelector("#btn");
+        // button.addEventListener("click", (event)=>{
+        //     window.open("https://www.google.com/", "");
+        // })
         const button = document.querySelector("#btn");
-        button.addEventListener("click", (event)=>{
-            window.open("https://www.google.com/", "");
-        })
+        button.addEventListener("click", (event) => {
+            setTimeout(() => {
+                window.open("https://www.google.com/", "_blank");
+            }, 5000); // 5000 milliseconds = 5 seconds
+        });
+
     </script>
 </body>
 </html>
